Digital ocean/ingress.yaml
# kubectl apply -f ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - ahmadhome.com
        - backend.ahmadhome.com
        - desktop.ahmadhome.com
        - school-backend.ahmadhome.com
        - school.ahmadhome.com
      secretName: echo-tls
  rules:
  - host: ahmadhome.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: reactsvc
              port:
                number: 7777
  - host: "desktop.ahmadhome.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-desktop-svc
            port:
              number: 6666
  - host: "school-backend.ahmadhome.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: express-service
            port:
              number: 4001

  - host: "school.ahmadhome.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: angular-school
            port:
              number: 4002
  - host: "backend.ahmadhome.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodejs-service
            port:
              number: 4001
